# akd-parser

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
akd_parser/: __init__.py  cli.py  extractor.py  pdf.py  schema.py
